--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "name": "react-flow-ui",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "node": "^24.9.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "reactflow": "^11.10.0"
+  },
+  "devDependencies": {
+    "vite": "^7.1.9",
+    "tailwindcss": "^3.4.13",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.38"
   }
 }
